Fix the back button on the Other Games page (z-index) (#25)

--- a/src/otherGames/OtherGames.scss
+++ b/src/otherGames/OtherGames.scss
@@ -20,7 +20,7 @@
     border-radius: 40em;
     width: 8em;
     height: 3em;
-    z-index: 1;
+    z-index: 2;
     color: rgb(255, 241, 255);
     cursor: pointer;
     overflow: hidden;
